--- a/Web Programming/Webspendoo-main/Spendooweb/forgot.html
+++ b/Web Programming/Webspendoo-main/Spendooweb/forgot.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Spendoo | Forgot Password</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="css/style.css" />
   <script type="module" src="firebase.js"></script>
   <script type="module" src="auth.js" defer></script>
 </head>
