--- a/Web Programming/Webspendoo-main/Spendooweb/index.html
+++ b/Web Programming/Webspendoo-main/Spendooweb/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Spendoo | Log In</title>
-  <link rel="stylesheet" href="style/variables.css" />
+  <link rel="stylesheet" href="css/variables.css" />
   
-  <link rel="stylesheet" href="style/root-stye.css" />
+  <link rel="stylesheet" href="css/root-style.css" />
   
-  <link rel="stylesheet" href="style/auth-style.css" />
+  <link rel="stylesheet" href="css/auth-style.css" />
   <script type="module" src="firebase.js"></script>
   <script type="module" src="auth.js" defer></script>
 </head>
