--- a/Web Programming/Webspendoo-main/spendoo-main-web/public/templates.html
+++ b/Web Programming/Webspendoo-main/spendoo-main-web/public/templates.html
@@ -97,7 +97,7 @@
       <div id="filter-buttons">
         <button id="">Income</button>
         <button id="">Expense</button>
-        <button id="">Type</button>
+        <button id="">Category</button>
       </div>
     </div>
   </div>
