analyze baru jadi tpi kosong

--- a/Web Programming/Webspendoo-main/spendoo-main-web/public/index.html
+++ b/Web Programming/Webspendoo-main/spendoo-main-web/public/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Spendoo | Log In</title>
-  <link rel="stylesheet" href="../css/variables.css" />
+  <link rel="stylesheet" href="css/variables.css" />
   
-  <link rel="stylesheet" href="../css/root-style.css" />
+  <link rel="stylesheet" href="css/root-style.css" />
   
-  <link rel="stylesheet" href="../css/auth-style.css" />
-  <script type="module" src="../scripts/firebase.js"></script>
-  <script type="module" src="../scripts/auth.js" defer></script>
+  <link rel="stylesheet" href="css/auth-style.css" />
+  <script type="module" src="scripts/firebase.js"></script>
+  <script type="module" src="scripts/auth.js" defer></script>
 </head>
 <body class="auth-page">
   
