--- a/Web Programming/Webspendoo-main/spendoo-main-web/public/signup.html
+++ b/Web Programming/Webspendoo-main/spendoo-main-web/public/signup.html
@@ -6,13 +6,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Spendoo | Sign Up</title>
-  <link rel="stylesheet" href="../css/variables.css" />
+  <link rel="stylesheet" href="css/variables.css" />
   
-  <link rel="stylesheet" href="../css/root-stye.css" />
+  <link rel="stylesheet" href="css/root-stye.css" />
   
-  <link rel="stylesheet" href="../css/auth-style.css" />
-  <script type="module" src="../scripts/firebase.js"></script>
-  <script type="module" src="../scripts/auth.js" defer></script>
+  <link rel="stylesheet" href="css/auth-style.css" />
+  <script type="module" src="scripts/firebase.js"></script>
+  <script type="module" src="scripts/auth.js" defer></script>
 </head>
 <!-- Menambahkan class 'auth-page' untuk styling yang sesuai -->
 <body class="auth-page">
@@ -63,6 +63,6 @@
   </div>
 </body>
 
-<script type="module" src="../scripts/auth.js" defer></script>
+<script type="module" src="scripts/auth.js" defer></script>
 
 </html>
