--- a/Web Programming/Webspendoo-main/spendoo-main-web/public/forgot.html
+++ b/Web Programming/Webspendoo-main/spendoo-main-web/public/forgot.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Spendoo | Forgot Password</title>
-  <link rel="stylesheet" href="../css/style.css" />
-  <script type="module" src="../scripts/firebase.js"></script>
-  <script type="module" src="../scripts/auth.js" defer></script>
+  <link rel="stylesheet" href="css/style.css" />
+  <script type="module" src="scripts/firebase.js"></script>
+  <script type="module" src="scripts/auth.js" defer></script>
 </head>
 <body>
   <div class="auth-wrapper">
