--- a/spendoo-main-web/public/index.html
+++ b/spendoo-main-web/public/index.html
@@ -42,10 +42,10 @@
 
         <!-- Social Login -->
         <div class="social-login">
-          <img id="googleBtnLogin" src="https://www.svgrepo.com/show/475656/google-color.svg" alt="Google" title="Google"/>
-          <img id="facebookBtnLogin" src="Assets/img/logoFacebook.png" alt="Facebook" title="Facebook"/>
-          <img id="githubBtnLogin" src="https://www.svgrepo.com/show/475654/github-color.svg" alt="GitHub" title="GitHub"/>
-          <img id="appleBtnLogin" src="Assets/img/logoApple.png" alt="Apple" title="Apple"/>
+          <img id="googleBtn" src="https://www.svgrepo.com/show/475656/google-color.svg" alt="Google" title="Google"/>
+          <img id="facebookBtn" src="Assets/img/logoFacebook.png" alt="Facebook" title="Facebook"/>
+          <img id="githubBtn" src="https://www.svgrepo.com/show/475654/github-color.svg" alt="GitHub" title="GitHub"/>
+          <img id="appleBtn" src="Assets/img/logoApple.png" alt="Apple" title="Apple"/>
         </div>
 
         <!-- Link to Sign Up / Guest -->
