--- a/Web Programming/Webspendoo-main/spendoo-main-web/public/main.html
+++ b/Web Programming/Webspendoo-main/spendoo-main-web/public/main.html
@@ -58,7 +58,7 @@
               <!-- Divider Line -->
               <li class="divider"></li>
               <!-- Logout Link -->
-              <li><a href="#" class="danger-text">Logout</a></li>
+              <li><a href="index.html" class="danger-text">Logout</a></li>
             </ul>
           </div>
         </div>
