--- a/Web Programming/Webspendoo-main/Spendooweb/main.html
+++ b/Web Programming/Webspendoo-main/Spendooweb/main.html
@@ -52,9 +52,10 @@
             <div class="dropdown-header">
               <p class="user-email">guest@spendoo.com</p>
             </div>
-            <ul class="dropdown-list">
+              <ul class="dropdown-list">
               <li><a href="#">Settings</a></li>
-              <li><a href="#">Export Data</a></li>
+              <li><a href="#" id="btn-export-data">Export Data</a></li> 
+              <li class="divider"></li>
               <!-- Divider Line -->
               <li class="divider"></li>
               <!-- Logout Link -->
