--- a/spendoo-main-web/public/main.html
+++ b/spendoo-main-web/public/main.html
@@ -38,8 +38,7 @@
             <p class="user-email">guest@spendoo.com</p>
           </div>
           <ul class="dropdown-list">
-            <li><a href="#">Settings</a></li>
-            <li><a href="#">Export Data</a></li>
+            <li><a href="#" id="btn-export-csv">Export Data</a></li>
             <li class="divider"></li>
             <li><a href="#" id="logoutBtn" class="danger-text">Logout</a></li>
           </ul>
